# fancy_collection

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/: nadeau.h
test/: CMakeLists.txt  test_design_pattern_factory.cc  test_mem_usage.cc  test_random.cc
test/cxxopt/: CMakeLists.txt  main.cc
